Fix horizontal scrollbar - width: 100% force each element to fill the browser. I with padding, end up with a scrollbar.

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .container {
   max-width: 980px;
-  width: 100%;
   padding: 15px;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .wrap {
