--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,6 @@
 .footer{
   position: absolute;
   bottom: 0;
-  width: 100%;
   height: 50px;
   background-color: #f71b85;
   right: 0;
@@ -9,6 +8,7 @@
   left: 0;
   padding: .4rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .footer p {
