--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,6 @@
 }
 
 .content {
-  width: 100%;
   margin: auto;
   padding: 20px 16px;
   overflow: auto;
